--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <input type="file" id="input">
     <button id="button">Generate</button>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
     <br>
     <input readonly id="text" onClick="this.select();">
 </body>
